--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code Web Editor</title>
     <link rel="stylesheet" href="./index.css">
     <script src="./modules/librarys/split-grid.js"></script>
+    <script src="./modules/librarys/js-base64.js"></script>
 </head>
 
 <body>
     <main id="app">
 
     </main>
+    <script src=" ./index.js" type="module"></script>
 </body>
 
-<script src=" ./index.js" type="module"></script>
 
 </html>
