agregando monaco editor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./index.css">
     <script src="./modules/librarys/split-grid.js"></script>
     <script src="./modules/librarys/js-base64.js"></script>
+    <script type="module" src="node_modules/@vanillawc/wc-monaco-editor/index.js"></script>
+
+
 </head>
 
 <body>
