--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./index.css">
     <script src="./modules/librarys/split-grid.js"></script>
     <script src="./modules/librarys/js-base64.js"></script>
-    <script type="module" src="node_modules/@vanillawc/wc-monaco-editor/index.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/gh/vanillawc/wc-monaco-editor@1/index.js"></script>
 
 
 </head>
